Fix issues in regards to the updated Cosium library usage